Removed scores class on stat sheet div to fix spacing issue with score ticker

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -18,12 +18,6 @@
   justify-content: space-around;
 }
 
-.score-ticker {
-  display: flex;
-  justify-content: space-between;
-  width: 20vh;
-}
-
 .mixed-color {
   background-color: green;
   width: 42vh;
